2025-03-08T00:33:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13731879636 # 587
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-08
* notice: last 14d: unq all: 4 1761
* notice: prev accum: outdated-unq outdated-all / unq all: 2456 245665 / 2483 247449
* notice: next accum: outdated-unq outdated-all / unq all: 2458 245794 / 2485 247576
* notice: prev exec diff / last date diff / accum: unq all: +2 +127 -0 -21 / +2 +127 -0 -0 / 2 127
* notice: removed / changed dates: [2025-02-21] / [2025-02-22 2025-03-07]

2025-03-07T00:42:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13711179141 # 586
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-07
* notice: last 14d: unq all: 4 1764
* notice: prev accum: outdated-unq outdated-all / unq all: 2454 245536 / 2481 247322
* notice: next accum: outdated-unq outdated-all / unq all: 2456 245665 / 2483 247449
* notice: prev exec diff / last date diff / accum: unq all: +2 +127 -0 -20 / +2 +127 -0 -0 / 2 127
* notice: removed / changed dates: [2025-02-20] / [2025-02-21 2025-03-06]

2025-03-06T00:41:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13688553477 # 585
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-06
* notice: last 14d: unq all: 4 1766
* notice: prev accum: outdated-unq outdated-all / unq all: 2451 245406 / 2480 247198
* notice: next accum: outdated-unq outdated-all / unq all: 2454 245536 / 2481 247322
* notice: prev exec diff / last date diff / accum: unq all: +1 +124 -0 -20 / +1 +124 -0 -0 / 1 124
* notice: removed / changed dates: [2025-02-19] / [2025-02-20 2025-03-05]

2025-03-05T00:41:52Z: